# doc-mcp

./: .env.example  .gitignore  .npmignore  CLAUDE.md  LICENSE  NPM_PUBLISH_GUIDE.md  ONLINE_SERVICE_ARCHITECTURE.md  PRD.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  TODO.md  analyze_ppt_sample.py  create_templates.py  demo_excel_parsing.py  demo_parsing.py  demo_ppt_parsing.py  package.json  publish.sh  pyproject.toml  requirements.txt  start_server.sh  templates_metadata.json  test_excel_parsing.py  test_parsing.py  test_ppt_parsing.py  test_server.py
docs/: excel_parsing_feature.md  todo.md
scripts/: install.cjs  prepublish.cjs
src/: __init__.py  server.py
templates/: README.md  contract.docx  invoice.docx  letter.docx  report.docx
